Added list page which displays all discussion from db

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    HOME PAGE
+    <h1>HOME PAGE</h1>
+    <a href="list">See All Discussions</a>
 </body>
 </html>
