--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -6,14 +6,28 @@
 </head>
 <body>
 
+<p th:text="${message}"></p>
+
+<div>
+    <form method="post" th:object="${discussionForm}">
+        <label>Your Title:</label>
+        <input type="text" th:field="*{title}" value="Your title here"/>
+        <label>Your Message:</label>
+        <textarea cols="32" rows="10" th:field="*{content}">Your message here</textarea>
+        <input type="submit" value="Submit"/>
+
+    </form>
+
     <h1>PostIt Discussion List</h1>
 
     <div th:each="discussion: ${discussions}">
         <hr/>
-        <h3 th:text="${discussion.title}" />
-        <p th:text="${discussion.content}" />
+        <h3 th:text="${discussion.title}"/>
+        <p th:text="${discussion.content}"/>
         <hr/>
     </div>
+
+</div>
 
 </body>
 </html>
